<resources>
    <string name="app_name">Sell</string>
    <string name="create_new_account">Enter your information below to create a new account</string>
    <string name="update_account">You can update your account here</string>
    <string name="login_info">Enter your login info to sign in to your account</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="create_new">Create new</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="type_password">Type Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab__main">Tab</string>
    <string name="tab_text_1">Bids</string>
    <string name="tab_text_2">History</string>
    <string name="title_activity_history__seller">History Seller</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
